--- a/AboutMe.html
+++ b/AboutMe.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="HomePage.html">About Me</a></h1>
+						<h1><a href="index.html">About Me</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -26,7 +26,7 @@
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
-								<li><a href="HomePage.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="AboutMe.html">AboutMe</a></li>
 
 							</ul>
